tests/basic/check/assert/030.pan.out
tests/basic/check/assert/030.pan:4:1-4: error: cannot solve constraints of f30
tests/basic/check/assert/030.pan:8:1-4: error: cannot solve constraints of f31