tests/basic/check/assert/030.pan
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f30 : {v:unit|false}
f30 = assert true

-- NOTE: "vâ‰ unit" reduces to "false"
f31 : {v:unit|vâ‰ unit}
f31 = assert true

-- NOTE:
-- these should fail because "true" is not a subtype of "false"
-- the type of "assert true" is "{v:unit|true}"
